[package]
name = "raycast"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bytemuck = "1.21.0"
cgmath = "0.18.0"
env_logger = "0.11.6"
log = "0.4.25"
pollster = "0.4.0"
wgpu = "24.0.0"
winit = "0.30.8"

[dependencies.image]
version = "0.25.5"
default-features = false
features = ["png", "jpeg"]
